--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "helioslauncher",
+  "name": "overfarmlauncher",
   "version": "2.1.0",
-  "productName": "Helios Launcher",
+  "productName": "Overfarm Launcher",
   "description": "Modded Minecraft Launcher",
   "author": "Daniel Scalzi (https://github.com/dscalzi/)",
   "license": "UNLICENSED",
